--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "it's a real sweet app",
   "main": "index.js",
   "scripts": {
-    "start": "budo . -d --serve bundle.js --live",
+    "dev:start": "budo . -d --serve bundle.js --live",
     "build": "browserify . -o bundle.js -g uglifyify",
     "test": "browserify test.js | node | tap-spec",
     "dist": "mkdir -p dist && bash -c 'cp *.{js,html,css} dist'",
     "push": "gh-pages -d dist",
-    "deploy": "npm run build && npm run dist && npm run push"
+    "deploy": "npm run build && npm run dist && npm run push",
+    "start": "node server.js"
   },
   "browserify": {
     "transform": [
@@ -27,6 +28,10 @@
   },
   "homepage": "https://github.com/lau-ren/laurencolls.com",
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.14.0",
+    "path": "^0.12.7",
     "react-router": "^2.5.1"
   },
   "devDependencies": {
