--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dist": "mkdir -p dist && bash -c 'cp *.{js,html,css} dist'",
     "push": "gh-pages -d dist",
     "deploy": "npm run build && npm run dist && npm run push",
-    "postinstall": "browserify index.js -o bundle.js -t babelify",
+    "postinstall":  "browserify . -o bundle.js -g uglifyify",
     "start": "node server.js"
   },
   "browserify": {
