--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
   "description": "it's a real sweet app",
   "main": "index.js",
   "scripts": {
-    "dev:start": "budo . -d --serve bundle.js --live",
-    "build": "browserify . -o bundle.js -g uglifyify",
-    "test": "browserify test.js | node | tap-spec",
-    "dist": "mkdir -p dist && bash -c 'cp *.{js,html,css} dist'",
-    "push": "gh-pages -d dist",
-    "deploy": "npm run build && npm run dist && npm run push",
-    "postinstall":  "browserify . -o bundle.js -g uglifyify",
-    "start": "node server.js"
+    "dev:build-js": "watchify  src/index.js -o public/bundle.js -v",
+    "dev:watch": "npm run dev:build-js",
+    "dev:start": "http-server public -p 8008",
+    "postinstall": "browserify ./index.js -o ./bundle.js -t babelify",
+    "start": "node index.js"
   },
   "browserify": {
     "transform": [
