--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dist": "mkdir -p dist && bash -c 'cp *.{js,html,css} dist'",
     "push": "gh-pages -d dist",
     "deploy": "npm run build && npm run dist && npm run push",
-    "postinstall": "browserify ./index.js -o ./bundle.js -t babelify",
+    "postinstall": "browserify ./index.js -o ./bundle.js -t babelify -g uglifyify",
     "start": "node server.js"
   },
   "browserify": {
@@ -39,15 +39,14 @@
     "path": "^0.12.7",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
-    "react-router": "^2.5.1"
+    "react-router": "^2.5.1",
+    "uglifyify": "^3.0.1",
   },
   "devDependencies": {
     "budo": "^8.2.0",
     "gh-pages": "^0.11.0",
-    
     "tap-spec": "^4.1.1",
     "tape": "^4.5.1",
-    "uglifyify": "^3.0.1",
     "watchify": "^3.7.0"
   }
 }
