--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-router": "^2.5.1",
-    "uglifyify": "^3.0.1",
+    "uglifyify": "^3.0.1"
   },
   "devDependencies": {
     "budo": "^8.2.0",
