--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "laurencolls.com",
   "version": "1.0.0",
-  "description": "it's a real sweet app",
+  "description": "Lauren Colls",
   "main": "index.js",
   "scripts": {
     "dev:start": "budo . -d --serve bundle.js --live",
