--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "description": "Lauren Colls",
   "main": "index.js",
   "scripts": {
-    "dev:start": "budo . -d --serve bundle.js --live",
     "build": "browserify . -o bundle.js -g uglifyify",
-    "test": "browserify test.js | node | tap-spec",
-    "dist": "mkdir -p dist && bash -c 'cp *.{js,html,css} dist'",
-    "push": "gh-pages -d dist",
-    "deploy": "npm run build && npm run dist && npm run push",
+    "sass": "node-sass -w stylesheets/sass/ -o stylesheets/css/",
+    "dev:start": "budo . -d --serve bundle.js --live",
     "postinstall": "browserify ./index.js -o ./bundle.js -t babelify -g uglifyify",
     "start": "node server.js"
   },
@@ -45,6 +42,7 @@
   "devDependencies": {
     "budo": "^8.2.0",
     "gh-pages": "^0.11.0",
+    "node-sass": "^3.8.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.5.1",
     "watchify": "^3.7.0"
